# gci

./: .env.example  .env.staging  .gitignore  README.md  docker-compose.postgres.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_spec.md
.github/workflows/: build-windows.yml  ci.yml  tests.yml
app/: apps.py  constants.py  urls.py
app/admin/: __init__.py  customer_admin.py  inventory_item_admin.py  invoice_admin.py  item_admin.py  lineitem_admin.py  seller_admin.py
app/core/: constants.py
app/migrations/: 0001_initial.py  0002_alter_invoicediscount_unique_together_and_more.py  0002_remove_invoice_valid_invoice_status_invoice_is_draft_and_more.py  0003_alter_invoice_total_due.py  0003_remove_invoicetax_invoice_remove_invoicetax_tax_and_more.py  0004_alter_customer_options_and_more.py  0004_remove_invoice_is_draft_alter_invoice_currency_name.py  0005_alter_invoice_options_and_more.py  0007_remove_customer_postal_code.py  (+16 more)
config/: asgi.py  settings.py  urls.py  wsgi.py
desktop_admin/: __init__.py  admin_server.py
desktop_app/: bootstrap_django.py  main.py
docs/: customer_management_stories.md  data_model.md  database-setup.md  desktop-admin.md  django_project_plan.md  invoice_feature_requirements.md  operations_plan.md  project_tracker.md  qa_test_plan.md  release1_scope.md  requirements_spec.md  ui_guidelines.md  usability_validation.md  user_flows.md  wireframes.md
gci/: asgi.py  settings.py  urls.py  wsgi.py
gci_backend/: asgi.py  settings.py  urls.py  wsgi.py
store/: manage.py
templates/: base.html
tests/: test_admin.py
(+107 files in other folders)
